# pypi-test

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/ff_test/: main.py
